--- a/src/interface/ui/image_window_settings.ui
+++ b/src/interface/ui/image_window_settings.ui
@@ -861,6 +861,11 @@
            </item>
            <item>
             <property name="text">
+             <string>median</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
              <string>std</string>
             </property>
            </item>
